# ChessStats

./: Example.ipynb  Opening Detector.ipynb  README.md  opening_graph.pickle  parse_pgn.py  pgn_grammar.py  pyproject.toml
data/: example.pgn
src/: pgn_grammar.py
src/jchess/: constants.py  dashboard.py  data.py  enums.py  expander.py  gameplay.py  model.py  opening_detector.py  visualization.py
src/jchess/cli/: parse_pgn.py
src/jchess/data/: data.py  expander.py  loader.py
src/jchess/pgn/: parser.py
src/jchess/visualization/: dashboard.py  visualization.py
test/: test_grammar.py
tests/: test_gameplay.py  test_grammar.py  test_model.py
