[tool.poetry]
name = "jchess"
version = "0.1.0"
description = "Package that can help turn a pgn file into chess insights"
authors = ["jaco <mijnietmailen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
parsita = "^1.7.1"
pandas = "^1.5.1"
pydantic = "^1.10.2"
matplotlib = "^3.6.2"
stockfish = "^3.28.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
